# A-RSS-Reader

./: CLAUDE.md  CONVERSATION_2026-01-13.md  Cargo.toml  PYTHON_CONVERSION_SUMMARY.md  README.md
.claude/: settings.local.json
python/: CONVERSION_NOTES.md  OPTIONS_GUIDE.md  QUICKSTART.md  README_PYTHON.md  STEP_BY_STEP.md  daily-news.bat  pyproject.toml  requirements.txt  setup.py  test_run.bat
python/src/: __init__.py  app.py  config.py  error.py  main.py
python/src/ai/: __init__.py  summarizer.py
python/src/db/: __init__.py  repository.py  schema.py
python/src/feed/: __init__.py  fetcher.py  opml.py
python/src/models/: __init__.py  article.py  feed.py  summary.py
python/src/services/: __init__.py  content_fetcher.py  raindrop.py
python/src/tui/: __init__.py  app.py
scripts/: build-release.sh
src/: app.rs  main.rs
src/feed/: fetcher.rs
src/services/: raindrop.rs
src/tui/: ui.rs
systemd/: speedy-reader-refresh.service  speedy-reader-refresh.timer
